fix type